Connexion entre les interfaces (Graphique et Terminal) et Game. Fonctionnel dans l'idée mais impossible de stopper un s.nextInt si l'utilisateur choisi d'utiliser l'interface graphique.